<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dim16">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagePlaceDetail"
            android:contentDescription="@string/current_pic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim200"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/wine_route" />

        <ImageButton
            android:id="@+id/webPlaceDetail"
            android:contentDescription="@string/current_web"
            android:layout_marginTop="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/imagePlaceDetail"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@drawable/globe" />

        <TextView
            android:id="@+id/namePlaceDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/webPlaceDetail"
            android:layout_marginTop="@dimen/dim8"
            android:text="@string/nameWineRoute"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text22"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infoPlaceDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/namePlaceDetail"
            android:layout_marginTop="@dimen/dim8"
            android:text="@string/infoWineRoute"
            android:textSize="@dimen/text16" />

    </RelativeLayout>
</ScrollView>
