<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listTwo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/dim90"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageHere"
        android:layout_width="@dimen/dim100"
        android:layout_height="@dimen/dim90"
        android:contentDescription="@string/thumb_pic"
        android:scaleType="fitXY"
        android:src="@drawable/wine_route" />

    <LinearLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim90"
        android:layout_alignBottom="@id/imageHere"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/imageHere"
        android:orientation="vertical"
        android:paddingEnd="@dimen/dim40"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/nameHere"
            style="@style/textListItem"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            tools:text="@string/nameWineRoute" />

        <TextView
            android:id="@+id/quoteHere"
            style="@style/textListItem"
            android:layout_weight="2"
            android:textAppearance="?android:textAppearanceSmall"
            tools:text="@string/quoteWineRoute" />

    </LinearLayout>

</RelativeLayout>